--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! - -
 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 Name : index . html
-Assignment : Lab 1 Exercise A
+Assignment : Lab 1 Github Part
 Author : Alvin Long
 Submission : Jan 17 , 2024
 Description : A simple HTML file .
