Added base files

--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,6 @@ Assignment : Assignment 1
 Group members : Alvin Long
 UCIDs : 30184369
 Submission : Feb 1 , 2024
-File description : The homepage of the e-commerce website
+File description : The contact page
 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 -->
-
-<! DOCTYPE html >
-< html >
-< head >
-< title > ENSF 381 Lab 1 </ title >
-</ head >
-< body >
-<h1 > Welcome to My Webpage </ h1 >
-<p > I changed this text. </p >
-</ body >
-</ html 
